# cricket-guru

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
.streamlit/: config.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/cricket_guru/: config.py  critic.py  db.py  gold_match.py  guardrails.py  llm.py  qdrant_store.py  serve.py  trace.py
backend/cricket_guru/arms/: base.py  stats_sql.py  text_rag.py
backend/cricket_guru/eval/: convert_routes.py  gold_multistep.py  gold_narrative.py  gold_rules.py  gold_rules_corpus.py  gold_stats.py  gold_wiki_corpus.py  harness.py  judge.py  latency_profile.py  phase_b.py  phase_b_agreement.py  preflag_narrative.py  reclassify_narrative.py  retrieval_recall.py  run_experiments.py
backend/cricket_guru/index/: build_index.py  chunking.py  embed.py
backend/cricket_guru/ingest/: fetch_sports_se.py  fetch_wikipedia.py  load_cricsheet.py  load_rules.py  load_sports_se.py  schema.sql
backend/cricket_guru/retrieval/: base.py  dense.py  hybrid.py  rerank.py  smoke.py
backend/cricket_guru/routing/: __init__.py  agent_router.py  rule_router.py
backend/cricket_guru/tools/: web_search.py
backend/tests/: isolation_check.py
data/: README.md
data/gold/: multistep_gold.json  narrative_gold.json  narrative_gold_corpus.json  narrative_preflags.json  narrative_routes.json  phase_b_labels.json  rules_gold.json  rules_gold_corpus.json  (+2 more)
deploy/: Dockerfile  entrypoint.sh
docs/: cricket_onepager.html  how-it-works.md  v2-roadmap.md
frontend/: app.py
(+6 files in other folders)
