[project]
name = "cricket-guru"
version = "0.1.0"
description = "Cricket Guru — comparative RAG + agent over cricket data"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9",
    "qdrant-client[fastembed]>=1.7",
    "rank-bm25>=0.2",
    "python-dotenv>=1.0",
    "pydantic-ai>=0.0.20",
    "openai>=1.0",
    "streamlit>=1.30",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cricket_guru*"]
